--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -272,5 +272,9 @@
         </div> <!-- end resume-wrapper -->
     </div>
 </section>
+<footer style="text-align: center; padding: 15px; background: #222; color: #fff; margin-top: 30px;">
+    Made by ARYAN SHARMA and ABHIGYAN SINGH
+</footer>
 
-</body> </html>
+</body>
+</html>
