Modify index.html for layout and background image
Updated the HTML structure and added a background image to the welcome section.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-<section class="page active" id="page-welcome" role="region" aria-label="Welcome section">
-    <div class="page-container">
+<section class="page active" id="page-welcome" role="region" aria-label="Welcome section" background-image="C:\Users\Aryan\Downloads\downloadn.jpeg">
+    <div class="page-container" >
         <h1>Welcome to the Resume Builder</h1>
         <p>Create a professional resume in minutes.</p>
         <!-- extra span inside button: silly but you see devs do this when they test icons -->
         <button id="get-started-btn" class="btn" title="Start">Get Started <span aria-hidden="true">→</span></button>
     </div>
+    
 </section>
 
 <!-- FORM PAGE -->
@@ -104,6 +105,7 @@
             <!-- This submit goes to the template selection stage — left text same as original -->
             <button type="submit" class="btn">Next: Choose Template</button>
         </form>
+        <div id="responseMessage" class="message"></div>
     </div>
 </section>
 
@@ -276,5 +278,5 @@
     Made by ARYAN SHARMA and ABHIGYAN SINGH
 </footer>
 
-</body>
-</html>
+
+</body> </html>
